apps/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-backend
  template:
    metadata:
      labels:
        app: python-backend
    spec:
      containers:
      - name: app
        image: acrabcreg2026test.azurecr.io/backend:cb6ec03fe7a3b4ad73dce23f55b68a876fce673d
        ports:
        - containerPort: 8000
