apps/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: python-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
